src/objects/Contact_Subscription__c.object
<CustomObject>
    <description>Junction object to tie a contact to an IE Subscription, the Unit for the Subscription and one IE role for the specific Unit &amp; Subscription.  If the contact has more than one IE role for a given Unit/Subscription, then another Contact Subscription record will be created for that Role/Unit combination.</description>
    <fields>
        <fullName>Active_Subscription1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Intelligent Equipment Contacts</relationshipLabel>
        <relationshipName>Contact_Subscriptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Intelligent Equipment Subscriptions</relationshipLabel>
        <relationshipName>Contact_Subscriptions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GWotGoAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Gateway on the Go Asset</description>
        <label>GWotGo Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Contact Subscriptions (GWotGo Asset)</relationshipLabel>
        <relationshipName>Contact_Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GWotGoPermAssoc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gateway on the Go Permanent Association 
Checked if the contact has a permanent association with the GW asset/subscription</description>
        <inlineHelpText>Gateway on the Go Permanent Association 
Checked if the contact has a permanent association with the GW asset/subscription</inlineHelpText>
        <label>GWotGoPermAssoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies this contact as a &quot;Master&quot; administrator for the Intelligent Equipment system.  A contact must already have the role of CustomerAdministrator or TechnicianAdministrator in order to be identified as a &quot;Master&quot;.</description>
        <inlineHelpText>Identifies this contact as a &quot;Master&quot; administrator for the Intelligent Equipment system.  A contact must already have the role of CustomerAdministrator or TechnicianAdministrator in order to be identified as a &quot;Master&quot;.</inlineHelpText>
        <label>Master Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CustomerAdministrator</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>TechnicianAdministrator</fullName>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>SalesRep</fullName>
                </value>
                <value>
                    <fullName>EquipmentAdministrator</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>RenewalAdministrator</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <formula>Asset__r.SerialNumber</formula>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <formula>TEXT ( Subscription__r.Type__c )</formula>
        <label>Subscription Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contact_Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Contact Subscription</label>
    <nameField>
        <displayFormat>CS-{000000000}</displayFormat>
        <label>Contact Subscription ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>